--- a/Assets/Css/Style.css
+++ b/Assets/Css/Style.css
@@ -4,33 +4,41 @@
     padding: 0;
     font-size: 20px;
     /* border: 1px solid red; */
+
+
 }
 body {
-    padding: 0 20%;
     background-image: url('../../img/bg.png');
+}
+.main-container {
+    background-color: #fff;
+    width: 55%;
+    margin: 0 auto;
 }
 
 header {
     display: flex;
-    justify-content: space-around;
-    background-color: white;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-left: 2rem;
+
 }
 header div {
     border: 1px solid white(255, 255, 255);
-    padding: 15px;
+    padding: 2rem;
+    text-transform: uppercase;
     
 }
 header div:hover {
     
     background-color: #662F32;
     color: white;
+    cursor: pointer;
 }
-main {background-color: rgb(255, 255, 255); 
 
-}
 
 h1 {
-    padding: 80px;
+    padding: 4rem;
     text-align: center;
  
 }
@@ -41,39 +49,29 @@ h1 {
     color:#692E32 ;
  }
  h1,span {
-    font-size:50px;
+    font-size:2.2rem;
   
- }
- main h1 {
-    align-items: baseline; 
  }
 
 .salon { width: 100%;
 
 }
 .sect-art {
-    padding: 20px;
-    display: flex;  
+    display: flex;
     justify-content: space-around;
-    align-items: stretch;
-    
+    margin: 1rem;
+} 
+h2 {
+    padding: 1rem;
+    background-color: #662F32;
 }
 
 .art-article{
-       
-    width: 30%;
-    margin: .5rem auto;
-    border: 1px solid #3e3744;
-    border-radius: 1px;
-    background-color:#645955;
-    border: solid red;
-           
-}
-.sect-art h2{
     display: flex;
-    justify-content: space-around;
-    background-color: #662F32;
-    padding: 20px;   
+    flex-direction: column;
+    width: 30%;
+    background-color:#564D48;
+    /* border: 1px solid red;      */
 }
 
 
@@ -82,37 +80,71 @@ h1 {
 }
 
 section {
-    background-color: white;
     color: rgb(255, 255, 255);
 }
 
-/* .plus-img { 
-    border: solid red;
-} */
+.plus-img { 
+    /* border: solid red; */
+}
 .div-btn{
     display: flex;
-    justify-content: end;
-    width: 100%;
-   
+    align-self: flex-end;
+    justify-self: flex-end;
     
 }
 h3 {
+    
     font-weight: 100;
     color: black;
 }
-.fleche{
 
+.sect-art {
+    display: flex;
+    justify-content: space-around;  
 }
-article .fleche {
-color: black;
+.sect-art * {
+    /* border: 1px solid red; */
 }
-.fleche ul,li,h3 {
+.fleche p:first-of-type{
+    font-weight: 900;
+    color: #692E32;
+}
+.fleche {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    color: black;
+}
+.fleche li {
     padding-bottom:2rem;
-    
-   list-style-image: url(./img/arrow.png)
+    color: black;
+    list-style-image: url(./img/arrow.png);
+    list-style-position: inside;
       }
 
-h3, strong, p {
+h3, p {
 padding-bottom: 2rem;
-padding: 20px;
+}
+.fleche input{
+    width: 50%; 
+    padding: 1rem;
+    background-color:#564D48;
+    color: white;
+    
+}
+footer article {
+    
+    margin-top: 2rem;
+    padding: 5rem;
+    background-color: white;
+  
+ 
+}
+
+hr {
+   border-top: solid black;
+}
+footer p {
+    padding-top: 6rem;
+
 }
